# OpenGLProject

./: .gitignore  OpenGLProject.sln  README.md
OpenGLProject/: CMakeLists.txt  OpenGLProject.vcxproj  OpenGLProject.vcxproj.filters  build.sh  imgui.ini
OpenGLProject/res/shaders/: Advanced.shader  Basic.shader  BasicParticle.shader
OpenGLProject/src/: Application.cpp  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
OpenGLProject/src/test/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestDynamicGeometry.cpp  TestDynamicGeometry.h  TestTexture2D.cpp  TestTexture2D.h  TestTexture2DBatch.cpp  TestTexture2DBatch.h
OpenGLProject/src/test/particles/: TestParticleSystem.cpp  TestParticleSystem.h
OpenGLProject/x64/Debug/: OpenGLProject.exe.recipe  OpenGLProject.ilk  vc143.idb
OpenGLProject/x64/Debug/OpenGLProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGLProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
